# VLA_nav

./: .gitignore  README_VISUAL_NAV.md  SETUP.md  create_dummy_data.py  fix_entry_points.sh  memo.txt  package.xml  pyproject.toml  pyproject.toml.bak  setup.cfg  setup.py  verify_local_dataset.py  verify_tokens.py
checkpoints_edge/edge-vla-finetune-v1/tensorboard/20260418-160002/: events.out.tfevents.1776495602.orne.129760.0
checkpoints_edge/edge-vla-finetune-v1/tensorboard/20260418-160229/: events.out.tfevents.1776495749.orne.136597.0
config/: topo_map_nav_node.yaml  vla_nav_7b_node.yaml  vla_nav_node.yaml
config_nav/: finetune_edge_local.yaml  finetune_local.yaml
data_sample/: traj_names.txt
data_sample/traj_0/: traj_data.pkl
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: topo_map_nav.launch.py  vla_nav.launch.py  vla_nav_7b.launch.py
log/: latest_build
omnivla/: __init__.py  zed_capture.py
omnivla/inference/: capture_goal_images_node.py  model_omnivla_edge.py  topo_localizer_node.py  topological_manager_node.py  train_omnivla_edge_local.py  utils_policy.py  vla_nav_7b_node.py  vla_nav_dataset_local.py  vla_nav_node.py
omnivla/vla_data_collection/: create_data_vla.py  create_topomap_node.py  monocular_data_collection_node.py  zed_capture_vla.py
prismatic/models/: load.py  materialize.py
prismatic/models/backbones/llm/: base_llm.py  llama2.py
prismatic/util/: data_utils.py
prismatic/vla/: action_tokenizer.py
prismatic/vla/datasets/: local_dataset.py
vla-scripts/: train_omnivla_local.py
(+17 files in other folders)
