<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omnivla</name>
  <version>0.0.1</version>
  <description>OmniVLA: An Omni-Modal Vision-Language-Action Model for Robot Navigation</description>
  <maintainer email="kasaiatuski@gmail.com">kasai</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
